<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalc</string>
    <string name="hello_world">Hello world!</string>
    <string name="inputLabel">Base amount:</string>
    <string name="outputLabel">Total tip:</string>
    <string name="button10Text">10%</string>
    <string name="button15Text">15%</string>
    <string name="button20Text">20%</string>
    <string name="partySizeText">Party size:</string>
    <string name="perPersonLabel">Tip per person:</string>
    <string name="zeroAmount">0.00</string>
    <string name="numPeopleDefaultValue">1</string>
    <string name="tipValueLabel">Tip percentage:</string>
    <string name="loadPresetLabel">Load:</string>
    <string name="saveButtonString">SAVE</string>
    <string name="totalPerPersonLabel">Total per person:</string>

</resources>
