<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <Button
        android:id="@+id/loadButton2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tipValueBar"
        android:layout_marginTop="22dp"
        android:layout_toRightOf="@+id/perPersonLabel"
        android:onClick="onButtonClick" />

    <Button
        android:id="@+id/loadButton3"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loadButton2"
        android:layout_alignBottom="@+id/loadButton2"
        android:layout_toRightOf="@+id/loadButton2"
        android:onClick="onButtonClick" />

    <Button
        android:id="@+id/loadButton1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loadButton2"
        android:layout_alignBottom="@+id/loadButton2"
        android:layout_toLeftOf="@+id/loadButton2"
        android:onClick="onButtonClick" />

    <Button
        android:id="@+id/saveButton2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loadButton2"
        android:layout_marginTop="14dp"
        android:layout_toRightOf="@+id/loadButton1"
        android:onClick="onButtonClick"
        android:text="@string/saveButtonString" />

    <Button
        android:id="@+id/saveButton3"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/saveButton2"
        android:layout_alignBottom="@+id/saveButton2"
        android:layout_toRightOf="@+id/saveButton2"
        android:onClick="onButtonClick"
        android:text="@string/saveButtonString" />

    <Button
        android:id="@+id/saveButton1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/saveButton2"
        android:layout_alignBottom="@+id/saveButton2"
        android:layout_toLeftOf="@+id/saveButton2"
        android:onClick="onButtonClick"
        android:text="@string/saveButtonString" />

    <TextView
        android:id="@+id/loadLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loadButton1"
        android:layout_alignBottom="@+id/loadButton1"
        android:layout_alignLeft="@+id/outputLabel"
        android:text="@string/loadPresetLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/inputLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tipValueBar"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:text="@string/inputLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/partySizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputLabel"
        android:layout_below="@+id/inputLabel"
        android:layout_marginTop="16dp"
        android:text="@string/partySizeText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tipValueLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/partySizeLabel"
        android:layout_below="@+id/partySizeLabel"
        android:layout_marginTop="16dp"
        android:text="@string/tipValueLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/inputValue"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/inputLabel"
        android:layout_toRightOf="@+id/loadButton1"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/partySizeInputValue"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/partySizeLabel"
        android:layout_alignBottom="@+id/partySizeLabel"
        android:layout_alignLeft="@+id/inputValue"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:inputType="number"
        android:text="@string/numPeopleDefaultValue" />

    <TextView
        android:id="@+id/tipInputValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tipValueLabel"
        android:layout_alignBottom="@+id/tipValueLabel"
        android:layout_alignRight="@+id/partySizeInputValue"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SeekBar
        android:id="@+id/tipValueBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tipInputValue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/outputLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tipValueBar"
        android:layout_below="@+id/saveButton1"
        android:layout_marginTop="20dp"
        android:text="@string/outputLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/perPersonLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/outputLabel"
        android:layout_below="@+id/outputLabel"
        android:layout_marginTop="14dp"
        android:text="@string/perPersonLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/totalTipValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/outputLabel"
        android:layout_alignRight="@+id/tipInputValue"
        android:hint="@string/zeroAmount"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tipPerPersonValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/perPersonLabel"
        android:layout_alignRight="@+id/totalTipValue"
        android:hint="@string/zeroAmount"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/totalPerPersonLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/perPersonLabel"
        android:layout_below="@+id/perPersonLabel"
        android:layout_marginTop="14dp"
        android:text="@string/totalPerPersonLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/totalPerPersonValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/totalPerPersonLabel"
        android:layout_alignRight="@+id/totalTipValue"
        android:hint="@string/zeroAmount"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>